<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="80dp"
        android:background="@drawable/panel_background_small"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGameOver"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ethnocentric_rg"
                android:text="@string/game_over"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral90"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:autoSizeMinTextSize="20sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/tvYourScore"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/ethnocentric_rg"
                android:text="@string/your_score"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral90"
                android:textStyle="bold"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/ethnocentric_rg"
                android:text="@string/default_score"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral90"
                android:textStyle="bold"
                app:autoSizeMinTextSize="25sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/ethnocentric_rg"
                android:text="@string/highscore"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral90"
                android:textStyle="bold"
                app:autoSizeMinTextSize="20sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/tvHighscore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/ethnocentric_rg"
                android:text="@string/default_highscore"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral90"
                android:textStyle="bold"
                app:autoSizeMinTextSize="20sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.33" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.67" />

                <ImageButton
                    android:id="@+id/homeButtton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/btn_home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline34"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.551" />

                <ImageButton
                    android:id="@+id/replayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline32"
                    app:layout_constraintStart_toStartOf="@+id/guideline34"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_replay" />

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline32"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_share" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>