<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background = "@drawable/allgemein_background_space"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRechts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineUnten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


    <TextView
        android:id="@+id/SS_einstellungen_ueberschrift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="Space Shooter"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRechts"
        app:layout_constraintStart_toStartOf="@+id/guidelineLinks"
        app:layout_constraintTop_toTopOf="@+id/guidelineOben"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/ss_einstellungen_startgame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/btn_selctor_default"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/button_startgame"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/buttonSpielerVerwaltung"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/btn_selctor_default"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/button_spielerVerwaltung"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonHighscores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/btn_selctor_default"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/button_highscore"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/buttonStatistiken"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/btn_selctor_default"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/button_statistiken"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/buttonEinstellungen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/btn_selctor_default"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/button_einstellungen"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="17sp"
        app:autoSizeMinTextSize="13sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guidelineUnten"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>