<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background = "@drawable/allgemein_background_space"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0">

    <CheckBox
        android:id="@+id/ss_einstellungen_checkbox_music"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/btn_default_3_normal"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/einstellungen_musik"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <CheckBox
        android:id="@+id/ss_einstellungen_checkbox_soundeffekte"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/btn_default_3_normal"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/einstellungen_Soundeffekte"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLinksEinstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRechtsEinstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineObenEinstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineUntenEinstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/SS_einstellungen_ueberschrift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ethnocentric_rg"
        android:text="@string/einstellungen_ueberschrift"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toTopOf="@+id/guidelineObenEinstellungen"
        app:layout_constraintVertical_bias="0.009" />

</androidx.constraintlayout.widget.ConstraintLayout>